feat: Update courses and curriculums schema models, link courses with stages and curricula with courses, and update deployment script
